--- a/index.html
+++ b/index.html
@@ -8,36 +8,32 @@
 </head>
 <body>
     <header>
-        <h1>Olá, eu sou [Seu Nome]</h1>
+        <h1>Olá, eu sou Joabe Alves da luz</h1>
         <p>Bem-vindo ao meu site pessoal!</p>
     </header>
 
     <main>
         <section class="sobre">
             <h2>Sobre Mim</h2>
-            <p>Sou uma pessoa apaixonada por tecnologia, automações e desenvolvimento. Trabalho com Python e tenho experiência em e-commerce e estoque.</p>
+            <p>Sou uma pessoa apaixonada por tecnologia, automações e desenvolvimento. Trabalho com Python e tenho experiência em e-commerce.</p>
         </section>
 
         <section class="habilidades">
             <h2>Habilidades</h2>
             <ul>
                 <li>Python (automação e bots)</li>
-                <li>API do WhatsApp</li>
-                <li>Controle de estoque</li>
-                <li>Excel/Office</li>
-                <li>HTML e CSS</li>
             </ul>
         </section>
 
         <section class="contato">
             <h2>Contato</h2>
-            <p>Email: seuemail@exemplo.com</p>
-            <p>GitHub: <a href="https://github.com/seuusuario" target="_blank">seuusuario</a></p>
+            <p>Email: joabealvesyt@gmail.com</p>
+            <p>GitHub: <a href="https://github.com/joabefliz" target="_blank">joabeflix</a></p>
         </section>
     </main>
 
     <footer>
-        <p>© 2025 - [Seu Nome]</p>
+        <p>© 2025 - Joabe Alves</p>
     </footer>
 </body>
 </html>
