--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section class="contato">
             <h2>Contato</h2>
             <p>Email: joabealvesyt@gmail.com</p>
-            <p>GitHub: <a href="https://github.com/joabefliz" target="_blank">joabeflix</a></p>
+            <p>GitHub: <a href="https://github.com/joabeflix" target="_blank">joabeflix</a></p>
         </section>
     </main>
 
