--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
             <h2>Habilidades</h2>
             <ul>
                 <li>Python (automação e bots)</li>
+                <li>Excel Avançado</li>
+                <li>Python - Excel</li>
+                <li>Interfaces em Python: Tkinter / Ttkbots </li>
+                <li>Framework Python: Ttkbootstrap </li>
+                <li>Framework Python: Gspread </li>
+                <li>Framework Python: Pandas </li>
+                <li>E outros Frameworks padrões como o Requests</li>
+
             </ul>
         </section>
 
