--- a/index.html
+++ b/index.html
@@ -3,45 +3,97 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Joabe Luz</title>
+    <title>Joabe Alves da Luz</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <header>
-        <h1>Olá, eu sou Joabe Alves da luz</h1>
-        <p>Bem-vindo ao meu site pessoal!</p>
+        <h1>Olá, eu sou Joabe Alves da Luz</h1>
+        <p>Tecnologia, automação e e-commerce aplicados ao mundo real</p>
     </header>
 
     <main>
+
         <section class="sobre">
             <h2>Sobre Mim</h2>
-            <p>Sou uma pessoa apaixonada por tecnologia, automações e desenvolvimento. Trabalho com Python e tenho experiência em e-commerce.</p>
+            <p>
+                Sou profissional com experiência em <strong>e-commerce, automação e tecnologia</strong>,
+                atuando no segmento de autopeças. Já trabalhei desde o estoque até áreas estratégicas,
+                criando automações em Excel e Python para otimizar processos.
+            </p>
+            <p>
+                Atualmente estudo e desenvolvo projetos em <strong>Python</strong>, com foco em automações,
+                integração de APIs e análise de dados aplicados ao negócio.
+            </p>
         </section>
 
         <section class="habilidades">
             <h2>Habilidades</h2>
             <ul>
-                <li>Python (automação e bots)</li>
-                <li>Excel Avançado</li>
-                <li>Python - Excel</li>
-                <li>Interfaces em Python: Tkinter / Ttkbots </li>
-                <li>Framework Python: Ttkbootstrap </li>
-                <li>Framework Python: Gspread </li>
-                <li>Framework Python: Pandas </li>
-                <li>E outros Frameworks padrões como o Requests</li>
+                <li>Python (automações, bots e scripts)</li>
+                <li>Integração com Google Sheets (gspread)</li>
+                <li>Manipulação de dados com Pandas</li>
+                <li>Leitura de arquivos JSON, XML e CSV</li>
+                <li>Excel Avançado aplicado ao e-commerce</li>
+                <li>Integração Python + Excel</li>
+                <li>Interfaces gráficas: Tkinter / ttkbootstrap</li>
+                <li>Consumo de APIs (Requests)</li>
+                <li>Noções de SQL (em aprendizado)</li>
+            </ul>
+        </section>
 
+        <section class="experiencia">
+            <h2>Experiência Profissional</h2>
+
+            <h3>SAMARC Distribuidora de Auto Peças LTDA</h3>
+
+            <p><strong>Auxiliar de Estoque</strong> — Nov/2021 a Ago/2022</p>
+            <ul>
+                <li>Contagem e conferência de produtos</li>
+                <li>Organização do estoque</li>
+                <li>Carga e descarga de mercadorias</li>
+            </ul>
+
+            <p><strong>Analista de Pesquisa de Mercado / E-commerce</strong> — Ago/2022 a Nov/2024</p>
+            <ul>
+                <li>Criação de mais de 10 mil anúncios na plataforma Tray</li>
+                <li>Gestão completa do e-commerce</li>
+                <li>Atendimento ao cliente</li>
+                <li>Automações em Excel</li>
+                <li>Desenvolvimento de scripts em Python para tarefas em larga escala</li>
+            </ul>
+
+            <p><strong>Assistente de Marketing</strong> — Desde Nov/2024</p>
+            <ul>
+                <li>Apoio em estratégias de marketing digital</li>
+                <li>Integração de dados entre estoque, anúncios e vendas</li>
+                <li>Desenvolvimento de soluções internas em Python</li>
+            </ul>
+        </section>
+
+        <section class="projetos">
+            <h2>Projetos</h2>
+            <ul>
+                <li>Sistema em Python integrado ao Google Sheets para controle interno</li>
+                <li>Bot de WhatsApp utilizando API oficial</li>
+                <li>Leitor de XML de Nota Fiscal (NFe) com interface gráfica</li>
+                <li>Automações para e-commerce e controle de estoque</li>
+                <li>Sistema de mapeamento dinâmico de dados de API</li>
             </ul>
         </section>
 
         <section class="contato">
             <h2>Contato</h2>
-            <p>Email: joabealvesyt@gmail.com</p>
-            <p>GitHub: <a href="https://github.com/joabeflix" target="_blank">joabeflix</a></p>
+            <p>Email: <a href="mailto:joabealvesyt@gmail.com">joabealvesyt@gmail.com</a></p>
+            <p>GitHub: <a href="https://github.com/joabeflix" target="_blank">github.com/joabeflix</a></p>
         </section>
+
     </main>
 
     <footer>
-        <p>© 2025 - Joabe Alves</p>
+        <p>© 2025 - Joabe Alves da Luz</p>
     </footer>
+
 </body>
 </html>
