--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
         <section class="sobre">
             <h2>Sobre Mim</h2>
             <p>
-                Sou profissional com experiência em <strong>e-commerce, automação e tecnologia</strong>,
-                atuando no segmento de autopeças. Já trabalhei desde o estoque até áreas estratégicas,
-                criando automações em Excel e Python para otimizar processos.
+                Profissional com experiência em <strong>e-commerce, marketing e automação</strong>,
+                atuando no segmento de autopeças desde 2021. Tenho vivência completa nos processos
+                internos da empresa, desde o estoque até áreas estratégicas.
             </p>
             <p>
-                Atualmente estudo e desenvolvo projetos em <strong>Python</strong>, com foco em automações,
-                integração de APIs e análise de dados aplicados ao negócio.
+                Atualmente atuo como <strong>Assistente de Marketing</strong>, desenvolvendo
+                automações em <strong>Python e Excel</strong>, integração de dados e soluções
+                para otimizar processos internos.
             </p>
         </section>
 
@@ -46,16 +47,16 @@
         <section class="experiencia">
             <h2>Experiência Profissional</h2>
 
-            <h3>SAMARC Distribuidora de Auto Peças LTDA</h3>
+            <h3>Grupo Econômico – SAMARC / ATACADÃO Distribuidora de Autopeças</h3>
 
-            <p><strong>Auxiliar de Estoque</strong> — Nov/2021 a Ago/2022</p>
+            <p><strong>Auxiliar de Estoque</strong> — Nov/2021 a Jul/2022</p>
             <ul>
                 <li>Contagem e conferência de produtos</li>
                 <li>Organização do estoque</li>
                 <li>Carga e descarga de mercadorias</li>
             </ul>
 
-            <p><strong>Analista de Pesquisa de Mercado / E-commerce</strong> — Ago/2022 a Nov/2024</p>
+            <p><strong>Analista de Pesquisa de Mercado / E-commerce</strong> — Ago/2022 a Fev/2025</p>
             <ul>
                 <li>Criação de mais de 10 mil anúncios na plataforma Tray</li>
                 <li>Gestão completa do e-commerce</li>
@@ -64,22 +65,32 @@
                 <li>Desenvolvimento de scripts em Python para tarefas em larga escala</li>
             </ul>
 
-            <p><strong>Assistente de Marketing</strong> — Desde Nov/2024</p>
+            <p><strong>Assistente de Marketing</strong> — Desde Ago/2022 (cargo atual)</p>
             <ul>
-                <li>Apoio em estratégias de marketing digital</li>
+                <li>Desenvolvimento de automações internas em Python</li>
                 <li>Integração de dados entre estoque, anúncios e vendas</li>
-                <li>Desenvolvimento de soluções internas em Python</li>
+                <li>Suporte a estratégias de marketing digital</li>
+                <li>Otimização de processos internos</li>
             </ul>
+
+            <p class="observacao">
+                <em>
+                    Obs.: Em 28/02/2025 ocorreu transferência interna para a empresa
+                    <strong>ATACADÃO Distribuidora de Autopeças LTDA</strong>,
+                    pertencente ao <strong>mesmo grupo econômico</strong>,
+                    sem interrupção do vínculo empregatício.
+                </em>
+            </p>
         </section>
 
         <section class="projetos">
             <h2>Projetos</h2>
             <ul>
+                <li>Sistema inteligente de criação de anúncios de forma automática usando API de fornecedores (Auto Peças)</li>
                 <li>Sistema em Python integrado ao Google Sheets para controle interno</li>
-                <li>Bot de WhatsApp utilizando API oficial</li>
-                <li>Leitor de XML de Nota Fiscal (NFe) com interface gráfica</li>
                 <li>Automações para e-commerce e controle de estoque</li>
-                <li>Sistema de mapeamento dinâmico de dados de API</li>
+                <li>Bot de WhatsApp utilizando API oficial</li>
+
             </ul>
         </section>
 
